# krkr-tts

./: Cargo.toml  README.md
.github/workflows/: release.yml
config/: default.toml
src/: client.rs  common.rs  server.rs
