[package]
name = "krkr-tts"
version = "0.1.0"
edition = "2024"
authors = ["zhaomaoniu <2667292003@qq.com>"]
description = "A TTS tool designed specifically for KrKr-powered games, enabling seamless audio narration of in-game text to enhance accessibility and immersion for players"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
lazy_static = "1.4"
chrono = "0.4"
md5 = "0.7"

[[bin]]
name = "krkr-tts-client"
path = "src/client.rs"

[[bin]]
name = "krkr-tts-server"
path = "src/server.rs"
